Fixed horizontal scroll at on smaller devices

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -22,6 +22,11 @@ blockquote {
   }
 }
 
+#content {
+  width: 100%;
+  overflow: hidden;
+}
+
 .title {
   text-align: center;
   font-family: 'Bungee', cursive;
@@ -57,15 +62,17 @@ blockquote {
 }
 
 #content3 {
+  width: 95%;
+  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-}
 
-#content3>div {
-  padding: 2rem;
-  padding-top: 5rem;
-  text-align: center;
+  >div {
+    padding: 2rem;
+    padding-top: 5rem;
+    text-align: center;
+  }
 }
 
 #footer {
