--- a/app/styles/t3.scss
+++ b/app/styles/t3.scss
@@ -1,7 +1,7 @@
 @import "colors";
 
 .t3 {
-  height: 14rem;
+  height: 16rem;
 }
 
 .t3-span {
